--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "overtrue/wisteria-laravel8x",
+    "name": "zyan/wisteria-laravel8x",
     "description": "Beautiful document tool for your project.",
     "license": "MIT",
     "authors": [
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-        "laravel/framework": "^8.0",
+        "laravel/framework": "^7.0|^8.0",
         "symfony/dom-crawler": "^5.0",
         "overtrue/laravel-emoji": "^1.1",
         "erusev/parsedown": "^1.7"
