--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "zyan/wisteria-laravel8x",
+    "name": "zyan/wisteria-laravel",
     "description": "Beautiful document tool for your project.",
     "license": "MIT",
     "authors": [
